<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Quick claim</string>
    <string name="app_name">Mobisevera</string>
    <string name="apikey_desc">API_KEY is required for you to authenticate yourself with the Severa server. You can get your API_KEY by logging into severa (in https://secure.severa.com ) and Going to Tools -&gt; Personal -&gt; Severa API (Tick the box and click the button to generate the key)</string>
    <string name="apikey_input_title">Enter API KEY below</string>
    <string name="apikey_input_submit">Save your key</string>
    <string name="apikey_test_submit">Finish Configuration</string>
    <string name="apikey_firstname_text">First name</string>
    <string name="apikey_lastname_text">Last name</string>
    <string name="apikey_show_password_checkbox">Show password</string>
    <string name="claim_amount_text">Custom amount</string>
    <string name="claim_projectname_text">Claim for project</string>
    <string name="claim_phasename_text">Project task</string>
    <string name="claim_explanation_text">Work description</string>
    <string name="claim_worktype_text">Work type</string>
    <string name="submit_button_claim_text">Valmis</string>
    <string name="claim_change_date_button_text">Change date</string>
    <string name="menuitem_options">Options</string>
    <string name="amount_minutes_text">Minutes</string>
    <string name="amount_hours_text">Hours</string>
    <string name="query_from_date_text">From date</string>
    <string name="query_to_date_text">Until date</string>
    <string name="query_by_project_label">Select project</string>
    <string name="query_by_task_label">Select task</string>
    <string name="query_button_label">Fetch claims</string>
    <!-- Strings for the activity navigation titles, used by MobiseveraNaviContainer -->
    <string name="navi_frontpage_new_claim">Uusi tuntikirjaus</string>
    <string name="navi_frontpage_query_claims">Työt</string>
    <string name="navi_frontpage_settings">Asetukset</string>
    <string name="navi_main_claim_project">Projekti [%STRING"]</string>
    <string name="navi_main_claim_phase">Vaihe [%STRING]</string>
    <string name="navi_main_claim_worktype">Työtyyppi [%STRING]</string>
    <string name="navi_main_claim_description">Kuvaus [%STRING]</string>
    <string name="claim_description_hint">Anna kuvaus</string>
    
    <string name="hour_label">h</string>
	<string name="minute_label">min</string>
	<string name="not_selected">Ei valittu</string>
	<string name="select_case_item_title">Valitse projekti</string>
	<string name="select_phase_item_title">Valitse vaihe</string>
	<string name="select_worktype_item_title">Valitse työn tyyppi</string>
	
	<!-- strings for dialogs -->
	<string name = "dialog_text_select_phase_before_worktype">Työvaihe pitää valita ennen työtyyppiä</string>
	<string name = "dialog_text_select_project_before_phase">Projekti pitää valita ennen työvaihetta</string>
	<string name = "dialog_text_hours_publish_failed">Kirjaus epäonnistui, pahoittelut. Tarkista kentät ja yritä uudelleen.</string>
	<string name = "dialog_text_hours_publish_ok">Tuntien kirjaus onnistui!</string>
	<string name = "dialog_text_missing_description">Tuntimerkinnältä puuttuu selitys</string>
	<string name = "dialog_text_bad_event_date">Päivämäärä on virheellinen</string>
	<string name = "dialog_text_missing_phase_guid">Työvaiheen tunniste on virheellinen</string>
	<string name = "dialog_text_bad_hours_quantity">Tuntien lukumäärä on virheellinen</string>
	<string name = "dialog_text_bad_used_guid">Käyttäjän tunniste on virheellinen</string>
	<string name = "dialog_text_bad_worktype_guid">Työtyypin tunniste on virheellinen</string>
</resources>
